--- a/index.ipynb
+++ b/index.ipynb
@@ -429,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_market = ne"
+    "la_boca_marker = neighborhood_markers[-1]"
    ]
   },
   {
